--- a/quoteGenerator.html
+++ b/quoteGenerator.html
@@ -8,20 +8,27 @@
 	<script src="https://use.fontawesome.com/fbebbe54b2.js"></script>
 </head>
 <body>
-	<div class="container container-table">
+	<div class="container">
 
-		<div id="quote-box">
+		<div id="quote-box" class="jumbotron col-md-8 col-lg-8">
 			<div id="quote-text">
-				Don't Cry because it is over, cry because it happened - Dr. Seuss
+				<p id="quote">
+					Don't Cry because it is over, cry because it happened
+				</p>
+				<p id="author">
+					 - Dr. Seuss
+				</p>
 			</div>
-			<div class="buttons">
-				<button id="new-quote" class= "btn btn-default">Get a new quote!</button>
-				<button id="twitter" class= "btn btn-default"><i class="fa fa-twitter" aria-hidden="true"></i></button>
-				<button id="tumblr" class= "btn btn-default"><i class="fa fa-tumblr" aria-hidden="true"></i></button>
+			<div class="container">
+				<div class="buttons col-md-6">
+					<button id="new-quote" class= "btn btn-default">Get a new quote!</button>
+					<button id="twitter" class= "btn btn-default"><i class="fa fa-twitter" aria-hidden="true"></i></button>
+					<button id="tumblr" class= "btn btn-default"><i class="fa fa-tumblr" aria-hidden="true"></i></button>
+				</div>
 			</div>
 		</div>
-		
 	</div>
+
 	
 	<script type="text/javascript" src="quoteGenerator.js"></script>
 </body>
